<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:orientation="vertical"
    tools:context=".TaoTaiKhoan">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Sửa tài khoản"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/taikhoanUpdate_DSTK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/tentaikhoan" />

    <EditText
        android:id="@+id/matkhauUpdate_DSTK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/matkhau" />

    <EditText
        android:id="@+id/hotenUpdate_DSTK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/tendangki" />

    <EditText
        android:id="@+id/sdtUpdate_DSTK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/sdt" />

    <EditText
        android:id="@+id/queUpdate_DSTK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/que" />

    <EditText
        android:id="@+id/linkAvataUpdate_DSTK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Nhập link ảnh" />

    <Button
        android:id="@+id/btnSua_DSTK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:backgroundTint="#95BD3F3F"
        android:text="UPDATE"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="italic" />


</LinearLayout>